--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Lottozahlen Generator</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <script src="script.js"></script>
-</body>
+    <h1>Lottozahlen Generator</h1>
+    <div class="flex">
+      <span class="number">12</span>
+      <span class="number">33</span>
+      <span class="number">54</span>
+      <span class="number">45</span>
+      <span class="number">62</span>
+      <span class="number">76</span>
+      <span class="number super">34</span>
+    </div>
+    <div class="button">Drück mich</div>
+  </body>
 </html>
