conect JF to HTML

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="script.js"></script>
     <h1>Lottozahlen Generator</h1>
     <div class="flex">
-      <span class="number">12</span>
-      <span class="number">33</span>
-      <span class="number">54</span>
-      <span class="number">45</span>
-      <span class="number">62</span>
-      <span class="number">76</span>
-      <span class="number super">34</span>
+      <span id="eins" class="number">12</span>
+      <span id="zwei" class="number">33</span>
+      <span id="drei" class="number">54</span>
+      <span id="vier" class="number">45</span>
+      <span id="fuenf" class="number">62</span>
+      <span id="sechs" class="number">76</span>
+      <span id="super-zahl" class="number super">34</span>
     </div>
-    <div class="button">Drück mich</div>
+    <div class="button" onclick="generateLottoNumbers()">Drück mich</div>
+    <script src="script.js"></script>
   </body>
 </html>
